Fixed bugs, added euro support

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 2,
-    "name": "Pay with life extension",
+    "name": "Pay with life",
     "description": "See how much you are paying with your life for the items you buy online",
     "version": "0.2",
     "content_scripts": [
